Fix white space issue on keyboard

--- a/src/styles/02_components/contentBody.scss
+++ b/src/styles/02_components/contentBody.scss
@@ -177,7 +177,7 @@
     height: 30%;
     background-color: white;
     border-left: 1px solid #3f3f3f;
-    width: 171%;
+    width: 178%;
     position: relative;
     pointer-events: all;
   }
